# pocx-wallet

./: .gitignore  .gitmodules  DEPLOYMENT.md  DOCKER.md  DOCKER_IMPLEMENTATION.md  Directory.Build.props  Dockerfile.bitcoin  Dockerfile.bitcoin-pocx  Dockerfile.electrs  Dockerfile.electrs-pocx  Dockerfile.pocx  GPU_ACCELERATION.md  IMPLEMENTATION_SUMMARY.md  PHOENIX_FEATURES.md  PocxWallet.sln  README.md  REQUIREMENTS_6-12_SUMMARY.md  SESSION_SUMMARY.md  SETTINGS_MENU_REFACTOR.md  USAGE.md  agents.md  appsettings.json.example  build-dependencies.ps1  build-dependencies.sh  config.yaml.example  services.yaml  update-repo.ps1  wallet.json
.github-wiki-migration/: 1-‐-PoCX-Wallet-Wiki.md  2-‐-Installation-Guide.md  Architecture.md  CLI-Reference.md  Home.md  Installation.md  MIGRATION-INSTRUCTIONS.md  README.md  Services.md  _Footer.md  _Sidebar.md  migrate-wiki.bat  migrate-wiki.ps1  migrate-wiki.sh
PocxWallet.Cli/: Demo.cs  PocxWallet.Cli.csproj  Program.cs  appsettings.json  wallet.json
PocxWallet.Cli.IntegrationTests/: NodeServiceStatusTests.cs  PocxWallet.Cli.IntegrationTests.csproj
PocxWallet.Core/: Class1.cs  PocxWallet.Core.csproj
PocxWallet.Desktop/: App.axaml  App.axaml.cs  PocxWallet.Desktop.csproj  Program.cs  app.manifest
PocxWallet.Mining/: Class1.cs  PocxWallet.Mining.csproj
PocxWallet.Native/: CMakeLists.txt  README.md  build.bat  build.sh
PocxWallet.Native/include/: vanitysearch_wrapper.h
PocxWallet.Native/src/: vanitysearch_wrapper.cpp
PocxWallet.Protocol/: Class1.cs  PocxWallet.Protocol.csproj
PocxWallet.Tests/: MnemonicTests.cs  PocxWallet.Tests.csproj
(+159 files in other folders)
